# action-setup-python-poetry

./: action.yml  pyproject.toml
.github/workflows/: ci.yml  issue993.yml
KSSO/: main.py
ksso/: pyproject.toml  success_message.html
