[poetry.name]
name = "action-setup-python-poetry"
version = "0.1.0"
description = "GitHub Actions to setup Python and Poetry"
authors = ["moneymeets GmbH <service@moneymeets.com>"]


[poetry.scripts]
invalid_package_versions = "action_setup_python_poetry.invalid_package_versions:main"


[poetry.dependencies]
python = "~3.12"
markupsafe = "*"

[poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
